- minor layout changes

--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -687,6 +687,7 @@ div#browserWarning
 
 .eula_fieldset
   background: -moz-linear-gradient(center top , #FFF 0pt, #FCFCFC 100%) repeat scroll 0 0 transparent
+  background: -webkit-gradient(linear, left top, left bottom, from(#FCFCFC), to(#FFFFFF))
 
 .eula_fieldset_body
   padding: 10px 10px 10px 10px
