--- a/webclient/public/stylesheets/webyast-forms.css
+++ b/webclient/public/stylesheets/webyast-forms.css
@@ -110,12 +110,22 @@
 	text-shadow: 1px 1px #fdfdfd;
 	display:inline-block;
 }
-.fieldset_body { padding:10px 10px 0px 10px; border:0px solid #d0d0d0; background:#fafafa; background: -moz-linear-gradient(top, #fafafa 0%, #fcfcfc 100%); }
+.fieldset_body {
+	padding:10px 10px 0px 10px;
+	border:0px solid #d0d0d0;
+	background:#fafafa;
+	background: -moz-linear-gradient(top, #fafafa 0%, #fcfcfc 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#fafafa), to(#fcfcfc));
+
+}
 .fieldset_body label { text-align:left; margin:0; }
 
 
 .webyast_form .button_container { margin:5px auto; position:relative; float:none; width:96%; }
-.webyast_form .hr { height:1px; border-bottom:0px dotted #ddd; margin:5px 0px;  background: -moz-linear-gradient(left, #d0d0d0 0%, #fafafa 100%);  padding:0px; }
+.webyast_form .hr { height:1px; border-bottom:0px dotted #ddd; margin:5px 0px;
+	background: -moz-linear-gradient(left, #d0d0d0 0%, #fafafa 100%);  padding:0px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#d0d0d0), to(#fafafa));
+}
 
 div.button_container div.nav-buttons { margin:0px 0px; padding:10px 0; }
 
