--- a/webclient/public/stylesheets/webyast-modal-dialog.css
+++ b/webclient/public/stylesheets/webyast-modal-dialog.css
@@ -88,7 +88,7 @@ div.mdevider { color:#888; height:10px; margin-bottom:5px; border-bottom: 1px so
 
 b.mwarning { color:#bb4d4d; /*text-decoration: blink;*/ }
 b.minfo { color:#999; /*text-decoration: blink;*/ }
-b.mwait { text-decoration: blink; }
+/*b.mwait { text-decoration: blink; } */
 
 /* div.mform { padding:10px; color:grey; } */
 
