--- a/webclient/public/stylesheets/webyast-controlpanel.css
+++ b/webclient/public/stylesheets/webyast-controlpanel.css
@@ -43,8 +43,8 @@
   -moz-border-radius:10px;
   /*ROUND*/
   -moz-border-radius:100%;
-
-  -webkit-border-radius:112px;
+	border-radius: 100%;
+  /*-webkit-border-radius:112px;*/
 
   background: -moz-radial-gradient(center 45deg, circle closest-side, #eee 0%, #474747 100%) transparent;
   background-image: -webkit-radial-gradient(circle, #eee, #000000);
