--- a/webclient/public/stylesheets/webyast-software.css
+++ b/webclient/public/stylesheets/webyast-software.css
@@ -13,17 +13,33 @@
 }
 
 #shade {
-  z-index:1000;
-  top:0; left:0;
-  position: absolute;
+
+
   width:100%;
   margin: auto; /* Div centered */
   min-height: 100%; /* min height for modern browser */
   height:auto !important; /* Important rule for modern browser */
   height:100%; /* min height for IE */
   overflow: hidden !important; /* hide FF scroll bar */
-  background-color: rgba(100, 100, 100, 0.5);
-  z-index:2001;
+
+  -moz-box-shadow: inset 0px 0px 300px #111;
+  -webkit-box-shadow: inset 0px 0px 300px #111;
+
+	background-color:#eee;
+
+  opacity:0.5;
+  -moz-opacity:0.5;
+
+  border: medium none;
+  cursor: wait;
+
+  left: 0;
+  top: 0;
+
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  z-index: 1000;
 }
 
 #wait {
@@ -44,7 +60,7 @@
   z-index:3000;
 }
 
-#updates_panel { margin:10px 8px; padding:0px; float:left; clear:both; }
+#updates_panel { margin:10px 16px; padding:0px; float:left; clear:both; }
 
 #updates_panel button[type="submit"] {
   display:block;
