- marked text strings to be translatable - moved roles css section from new_input to webyast-roles.css

--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -59,8 +59,9 @@ body
   background-color: !c_background
   /* BG Grey: #fcfcfc is taken see example above
   color: !c_text
-  /* font-family: Trebuchet MS, Helvetica, sans-serif
-  font-family: Helvetica, Tahoma, Trebuchet MS, Arial, Verdana, sans-serif
+  /*font-family: Trebuchet MS, Helvetica, sans-serif
+  /*font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif
+  font-family: Helvetica, "Trebuchet MS", Verdana, Arial, sans-serif
   width: 100%
   height: 100%
   margin: 0
