--- a/webclient/public/stylesheets/webyast-forms.css
+++ b/webclient/public/stylesheets/webyast-forms.css
@@ -73,7 +73,7 @@
 .fieldset_body .right { float:right; overflow:hidden; }
 
 
-.webyast_fieldset { margin:15px auto; position:relative; float:none; width:96%; padding:0px; border: 1px solid #d8d8d8; -moz-border-radius:3px; }
+.webyast_fieldset { margin:15px auto; position:relative; float:none; width:96%; padding:0px; border: 1px solid #d8d8d8; -moz-border-radius:3px; background: none repeat scroll 0 0 transparent; }
 
 .fieldset_header {
    line-height:30px;
