--- a/plugins/software/app/views/patch_updates/index.html.erb
+++ b/plugins/software/app/views/patch_updates/index.html.erb
@@ -145,7 +145,7 @@
 	      <button type="submit" id="comment" class="left active" value="all"
 	         onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
 	         :loading =>visual_effect(:appear, 'parent', :duration =>1), :complete => visual_effect(:fade, 'parent', :duration => 1)) %>">
-	         <img src='/icons/yast-online_update.png'/><%=_("All updates") %>&nbsp;<span>(<%=counter%>)</span>
+	         <img src='/images/install.png'/><%=_("All updates") %>&nbsp;<span>(<%=counter%>)</span>
 	      </button>
 	      <button type="submit" class="middle" value="security"
 	          onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
