--- a/plugins/status/app/views/status/_status_summary.html.erb
+++ b/plugins/status/app/views/status/_status_summary.html.erb
@@ -31,30 +31,25 @@
 <% end %>
 
 <% unless status.blank? %>
+  <% status.split(';').each do | message | %>
+    <div class="statusbar_row">
+     	<img src="/images/status-warning.png">
+ 	    <a href="status" class="warning_message">
+        <span><%= message %></span>
+      </a>
+    </div>
+  <% end %>
+
   <% javascript_tag do -%>
     jQuery(function($){ $('#status-eye').addClass('eye_warning'); });
     $('#status_indicator').addClass("status_warning");
   <% end -%>
 
-  <% status.split(';').each do | message | %>
-    <div class="statusbar_row">
-     	<img src="/images/status-warning2.png">
- 	    <a href="status" class="warning_message">
-        <%= message %>
-      </a>
-    </div>
-  <% end %>
-
-<!--  <div class="statusbar_row">
-    <a href="status" class="warning_message">
-      <span><%= status %></span>
-    </a>
-  </div> -->
 <% else %>
   <% if unauthorized -%>
     <div class="statusbar_row">
       <a href="status" class="warning_message">
-        <span><%= _("Cannot read system status - you have been logged out.") %></span> <!-- RORSCAN_ITL -->
+        <span><%= _("Cannot read system status - you have been logged out.") %></span><!-- RORSCAN_ITL -->
       </a>
     </div>
   <% elsif !error %>
