- added support for "Recently used modules" based on user behaviour

--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -326,10 +326,10 @@ ul li
     margin: 0 0 0.2em
     text-align: left
 
-#status
-  width: 70%
-  display: inline-block
-  vertical-align: middle
+/*#status
+/*  width: 70%
+/*  display: inline-block
+/*  vertical-align: middle
 
 #status_patches, #status_status
   margin: 0
