--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -32,23 +32,23 @@
     <%= yield :head %>
   <% else %>
     <%= javascript_include_tag 	  "jquery-1.4.2",
-				  "jquery.query", #FIXME write reason
-				  "jquery.timers",
-				  "jquery.ui.custom",
-				  "jquery.validate",
-				  "validation.js",
-				  "jqbrowser-compressed", #our browser detection extension
-				  "jquery.badbrowser", #original browser detection plugin
-				  "yast.widgets",
-				  "yast.helpers",
-				  "digitalspaghetti.password",
-				  "browser_fixes",
-				  "jquery.quicksearch"
-
+          "jquery.query", #FIXME write reason
+          "jquery.timers",
+          "jquery.ui.custom",
+          "jquery.validate",
+          "validation.js",
+          "jqbrowser-compressed", #our browser detection extension
+          "jquery.badbrowser", #original browser detection plugin
+          "yast.widgets",
+          "yast.helpers",
+          "digitalspaghetti.password",
+          "browser_fixes",
+          "jquery.quicksearch"
     %>
+
     <%= javascript_include_tag "jquerytimer", "jquerySessionTimeout", "jquery.blockUI", "jqueryDisableOnSubmit" %>
     <%= javascript_include_tag "jquery.tipsy", "jquery-effects.min", "jquery.tinysort", "slidernav", "webyast-online-help", "webyast-modal-dialog", "jquery.activity", "notifier" %>
-
+    <%= javascript_include_tag "webyast-localstorage" %> 
     <%= stylesheet_link_tag "yast","grid","style","jquery.jqplot.css", "jquery-ui-1.7.2.custom.css", "jquery-ui-1.7.2.custom-accordion.css", "jquery-ui-1.7.2.custom-tabs.css", :title=>"default", :charset=>"utf-8" %>
     <%= stylesheet_link_tag "new_inputs", "tipsy", "slidernav", "webyast-modal-dialog", "webyast-online-help", "webyast-controlpanel" %>
     <%= stylesheet_link_tag "webyast-forms" %>
@@ -63,7 +63,7 @@
 
   <script type="text/javascript">
     $(document).ready(function() {
-      $('div.overview a.controlpanel-shortcut').tipsy({gravity: 'n', delayIn: 800, opacity: 0.8 });
+      //$('div.overview a.controlpanel-shortcut').tipsy({gravity: 'n', delayIn: 800, opacity: 0.8 });
 
       <% if session[:expires] !=nil && session[:expires].class == Time %>
 	// get current time from back end and check if time zone set to UTC (client) bnc#631763
