--- a/webclient/public/stylesheets/webyast-controlpanel.css
+++ b/webclient/public/stylesheets/webyast-controlpanel.css
@@ -43,7 +43,7 @@
   -moz-border-radius:10px;
   /*ROUND*/
   -moz-border-radius:100%;
-	border-radius: 100%;
+  border-radius: 100%;
   /*-webkit-border-radius:112px;*/
 
   background: -moz-radial-gradient(center 45deg, circle closest-side, #eee 0%, #474747 100%) transparent;
@@ -70,11 +70,11 @@ div.statusbar_header {
 }
 
 div.statusbar_header label {
-    vertical-align:middle;
-    font-size:14px;
-    font-weight:bold;
-    color:#444;
-    text-shadow: 0 1px 0 #f5f5f5;
+  vertical-align:middle;
+  font-size:14px;
+  font-weight:bold;
+  color:#444;
+  text-shadow: 0 1px 0 #f5f5f5;
 }
 
 #statusbar_status_container {
@@ -123,7 +123,7 @@ div.statusbar_row a.warning_message {
 }
 
 div.statusbar_row a.warning_message:hover {
-	border-bottom: 1px solid #555555;
+  border-bottom: 1px solid #555555;
 }
 
 div.update_all input{ width:100%; }
@@ -135,9 +135,6 @@ div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
 .status_ok, .status_warning {
   margin:0 5px 0 -2px;
   display:inline-block;
-
-  /*width:18px;
-  height:18px;*/
   width:22px;
   height:22px;
   padding:0px;
@@ -166,10 +163,141 @@ div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
 #favorites { border-color: #eee; }
 
 .checked_health {
-	height:19px!important;
-	width:19px!important;
-	padding-right:6px;
-	margin:2px 1px 1px 2px;
-	vertical-align:middle;
+  height:19px!important;
+  width:19px!important;
+  padding-right:6px;
+  margin:2px 1px 1px 2px;
+  vertical-align:middle;
+}
+
+
+
+/* Quick sand  */
+
+#filter {
+  border-bottom: 1px solid #CCCCCC;
+  background: -moz-linear-gradient(center bottom , #E4E4E4, #EDEDED) repeat scroll 0 0 transparent;
+  background: -moz-linear-gradient(center bottom, #E1E1E1, #F0F0F0) repeat scroll 0 0 transparent;
+  line-height:32px;
+  height: 32px;
+  padding: 0 6px;
+  color: #666; 
+}
+
+#filter label {
+  border-color: #CCCCCC #EEEEEE #EEEEEE #CCCCCC;
+  border-style: solid;
+  border-width: 1px;
+  padding:0px;
+
+  margin-top: 4px;
+  margin-bottom: 4px;
+
+  display: inline-block;
+  text-align:center;
+  vertical-align:middle;
+  font-weight: bold;
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7);
+/*  background: url("/images/gradientx40.png") repeat-x scroll 0 0 white;*/
+  
+  background: -moz-linear-gradient(center bottom , #CCCCCC, #FFFFFF) repeat scroll 0 0 transparent;
+  line-height:24px;
+/*  -moz-border-radius:2px;*/
+  min-width:80px;
+
+}
+
+#filter_recent {
+  border-color: #CCCCCC #EEEEEE #EEEEEE #CCCCCC;
+  border-style: solid;
+  border-width: 1px;
+  padding:0px 18px;
+
+  margin-top: 4px;
+  margin-bottom: 4px;
+
+  display: inline-block;
+  text-align:center;
+  vertical-align:middle;
+  font-weight: bold;
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7);
+  
+  line-height:24px;
+}
+
+
+label.quicksand_button_active, filter_all:active {
+/*  background-color:#BFBFBF;*/
+/*  background: -moz-linear-gradient(center bottom , #B3B3B3 , #C8C8C8) repeat scroll 0 0 transparent!important;*/
+  -moz-box-shadow: 0px 0px 30px #a0a0a0 inset, 0px 0px 2px #333 inset; 
+
+  color:#444;
+  text-shadow: 0px 1px 0 #eee!important;
+}
+
+label.quicksand_button_left {
+  border-right:none;
+  margin-right:-4px;
+}
+
+label.quicksand_button_center {
+  border-left:none;
+  border-right:none;
+  margin-right:-4px;
+}
+
+label.quicksand_button_right {
+  border-left:none;
+}
+
+#visible_filters {
+  float:left;
+}
+
+#hidden_filters {
+  float:right;
+  display:none;
+}
+
+/* Control panel Image grid */
+.image-grid li {
+  width: 120px;
+  height: 140px;
+  margin: 10px 20px;
+  float: left;
+
+  text-align: center;
+  line-height: 20px;
+  color: #686f74;
+
+  list-style: none;
+  overflow: hidden;
+}
+
+.image-grid a.plugin_link {
+  color: #686f74;
+  border-bottom: 0px dotted #1E90FF;
+}
+
+.image-grid a.plugin_link:hover {
+  color: #686f74;
+  border-bottom: 0px dotted #1E90FF;
+}
+
+.image-grid img {
+  width: 100px;
+  height: 100px;
+  margin:10px;
+}
+
+.image-grid li img, .image-grid li strong {
+  display: inline-block;
+}
+
+.image-grid li strong {
+  color: #686f74;
+  width:100%;
+  height:32px;
+  line-height:16px;
 }
 
